--- a/style.css
+++ b/style.css
@@ -998,9 +998,13 @@ a {
 --------------------------------------------------------------*/
 .container {
   margin: 0 auto;
-  max-width: 1140px;
+  max-width: 1190px;
+  padding: 0 25px;
   position: relative;
   width: 100%; }
+  @media (max-width: 320px) {
+    .container {
+      padding: 0 15px; } }
 
 .site-content {
   padding: 5.3333em 0 5em; }
@@ -1009,8 +1013,8 @@ a {
     content: "";
     display: table; }
 
-.search-results .site-content,
-.archive .site-content {
+.archive .site-content,
+.search-results .site-content {
   padding-top: 4em; }
 
 .content-area {
@@ -1043,7 +1047,7 @@ a {
   @media (max-width: 768px) {
     .site-content .widget-area {
       float: none;
-      margin-top: 40px;
+      margin-top: 5.3333em;
       padding-left: 0;
       width: 100%; } }
 
