--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -6,7 +6,7 @@
 /*--------------------------------------------------------------
 ## Site Masthead
 --------------------------------------------------------------*/
-@import "primary/masthead";
+@import "masthead";
 
 /*--------------------------------------------------------------
 ## Posts and pages
@@ -26,4 +26,4 @@
 /*--------------------------------------------------------------
 ## Site Footer
 --------------------------------------------------------------*/
-@import "primary/footer";
+@import "footer";
