--- a/sass/style.scss
+++ b/sass/style.scss
@@ -88,7 +88,7 @@ https://wordpress.org/plugins/so-css/.
 /*--------------------------------------------------------------
 # Widgets
 --------------------------------------------------------------*/
-@import "site/secondary/widgets";
+@import "modules/widgets";
 
 /*--------------------------------------------------------------
 # Content
