Style the page links
Change sidebar padding and primary container width

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -6,7 +6,12 @@
 /*--------------------------------------------------------------
 ## Site Masthead
 --------------------------------------------------------------*/
-@import "masthead";
+@import "header/masthead";
+
+/*--------------------------------------------------------------
+## Full Screen Search
+--------------------------------------------------------------*/
+@import "header/search";
 
 /*--------------------------------------------------------------
 ## Posts and pages
